language/move-compiler/tests/move_check/translate/let_in_module.move
module M {
    let a:u32 = 1;
}
